<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0153A7">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="Guest Name"
        android:ems="10"
        android:id="@+id/userName"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentEnd="false"
        android:textColor="#ffffff"
        android:textColorHighlight="#ffffff"
        android:textColorHint="#ffffff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_toLeftOf="@+id/sign_in_button"
        android:layout_below="@+id/userName"
        android:background="@drawable/logbutton"
        android:textColor="#ada8a8"
        android:layout_alignBottom="@+id/sign_in_button"
        android:layout_alignLeft="@+id/userName"
        android:layout_alignStart="@+id/userName" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userName"
        android:layout_alignRight="@+id/userName"
        android:layout_alignEnd="@+id/userName" />


    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="200px"
        android:layout_height="100px"
        android:id="@+id/signOut"
        android:background="@drawable/signout"
        android:textColor= "#ada8a8"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/krowdedtitlewhite"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

</RelativeLayout>
