<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView android:id="@+id/listView"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:dividerHeight="10.0sp"/>


</LinearLayout>
